--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
         <section class="contact">
             <h2>Contacto</h2>
             <p>¿Tienes preguntas o deseas más información? Contáctanos y con gusto te atenderemos.</p>
-            <p>Email: contacto@gabrielcoach.com</p>
-            <p>Teléfono: +1 (123) 456-7890</p>
+            <p>Email: coachgabriel.aplicacion@gmail.com</p>
+            <p>Teléfono: +(52) 1-777-713-5749</p>
         </section>
     </div>
 
