--- a/index.html
+++ b/index.html
@@ -23,6 +23,17 @@
             font-size: 2em;
             margin: 0;
         }
+        .menu {
+            background-color: #0056b3;
+            padding: 10px;
+            text-align: center;
+        }
+        .menu a {
+            color: #fff;
+            text-decoration: none;
+            margin: 0 15px;
+            font-weight: bold;
+        }
         .container {
             max-width: 900px;
             margin: auto;
@@ -59,6 +70,12 @@
         <p>Tu Entrenador Personal de Bolsillo</p>
     </header>
 
+    <!-- Menú de navegación -->
+    <nav class="menu">
+        <a href="https://rinkyn05.github.io/app/">Inicio</a>
+        <a href="https://rinkyn05.github.io/app/politicas/politica-de-privacidad">Política de Privacidad</a>
+    </nav>
+
     <div class="container">
         <!-- Descripción general de la app -->
         <section class="about">
@@ -90,7 +107,7 @@
         <section class="contact">
             <h2>Contacto</h2>
             <p>¿Tienes preguntas o deseas más información? Contáctanos y con gusto te atenderemos.</p>
-            <p>Email: coachgabriel.aplicacion@gmail.com</p>
+            <p>Email: coachgabriel.aplicacion@gmail.com</p> 
             <p>Teléfono: +(52) 1-777-713-5749</p>
         </section>
     </div>
