--- a/politica-de-privacidad.html
+++ b/politica-de-privacidad.html
@@ -57,7 +57,7 @@
     <!-- Menú de navegación -->
     <nav class="menu">
         <a href="https://rinkyn05.github.io/app/">Inicio</a>
-        <a href="https://rinkyn05.github.io/app/politica-de-privacidad">Política de Privacidad</a>
+        <a href="https://rinkyn05.github.io/app/politica-de-privacidad.html">Política de Privacidad</a>
     </nav>
 
     <div class="container">
