--- a/politica-de-privacidad.html
+++ b/politica-de-privacidad.html
@@ -76,6 +76,15 @@
         </section>
     </div>
 
+    <!-- Información de contacto -->
+        <section class="contact">
+            <h2>Contacto</h2>
+            <p>¿Tienes preguntas o deseas más información? Contáctanos y con gusto te atenderemos.</p>
+            <p>Email: coachgabriel.aplicacion@gmail.com</p> 
+            <p>Teléfono: +(52) 1-777-713-5749</p>
+        </section>
+    </div>
+
     <footer>
         <p>&copy; 2024 Gabriel Coach. Todos los derechos reservados.</p>
     </footer>
