--- a/politica-de-privacidad.html
+++ b/politica-de-privacidad.html
@@ -58,6 +58,7 @@
     <nav class="menu">
         <a href="https://rinkyn05.github.io/app/">Inicio</a>
         <a href="https://rinkyn05.github.io/app/politicas/politica-de-privacidad.html">Política de Privacidad</a>
+        <a href="eliminar-cuenta.html">Eliminar Cuenta</a>
     </nav>
 
     <div class="container">
