--- a/eliminar-cuenta.html
+++ b/eliminar-cuenta.html
@@ -45,7 +45,7 @@
   <nav class="menu">
         <a href="https://rinkyn05.github.io/app/">Inicio</a>
         <a href="https://rinkyn05.github.io/app/politicas/politica-de-privacidad.html">Política de Privacidad</a>
-        <a href="eliminar-cuenta.html">Eliminar Cuenta</a>
+        <a href="https://rinkyn05.github.io/app/eliminar-cuenta.html">Eliminar Cuenta</a>
     </nav>
 
     <div class="container">
