--- a/eliminar-cuenta.html
+++ b/eliminar-cuenta.html
@@ -12,6 +12,18 @@
             color: #333;
             background-color: #f4f4f4;
         }
+
+        .menu {
+            background-color: #0056b3;
+            padding: 10px;
+            text-align: center;
+        }
+        .menu a {
+            color: #fff;
+            text-decoration: none;
+            margin: 0 15px;
+            font-weight: bold;
+        }
         header, footer {
             background-color: #007bff;
             color: #fff;
