--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
     <!-- Menú de navegación -->
     <nav class="menu">
         <a href="https://rinkyn05.github.io/app/">Inicio</a>
+        <a href="https://rinkyn05.github.io/app/leeme.html">Estructura</a>
         <a href="https://rinkyn05.github.io/app/politica-de-privacidad.html">Política de Privacidad</a>
         <a href="https://rinkyn05.github.io/app/eliminar-cuenta.html">Eliminar Cuenta</a>
     </nav>
